Archive2/da/572a9495269657/output
main.cpp: In function 'int main()':
main.cpp:27:47: error: 'CHAR_MAX' was not declared in this scope
  cout << "char - wartosc max (CHAR_MAX): " << CHAR_MAX << endl;
                                               ^
